--- a/article/93472.html
+++ b/article/93472.html
@@ -48,7 +48,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="/index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="https://primpress.ru/img/template/logo_light.svg"
+                                    src="/img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="b-navbar-dropdown-wrap">
                         <div class="b-navbar-dropdown-header">
-                            <form method="POST" action="https://primpress.ru/mobile-switch" accept-charset="UTF-8">
+                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8">
                                 <input name="_token" type="hidden" value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
                                 <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
@@ -133,7 +133,7 @@
                                 </p>
 
                                 <p><img alt="" class="imagePattern_big-full" data-author="dpskontrol_125rus"
-                                        src="/img/editor/images/WhatsApp%20Image%202022-11-13%20at%2008_51_57.jpeg" />
+                                        src="https://primpress.ru/img/editor/images/WhatsApp%20Image%202022-11-13%20at%2008_51_57.jpeg" />
                                 </p>
 
                                 <p>Как прокомментировали в мэрии, дорога не находится на балансе муниципалитета,
@@ -153,7 +153,7 @@
                                 <p>&laquo;Куда вы все едете, если такая ситуация на дорогах&raquo;, &ndash; комментируют
                                     интернет-пользователи.</p>
                             </div>
-                            <div class="b-channels"> <span class="b-channels__title"> Читайте Primpress.ru в </span>
+                            <div class="b-channels"> <span class="b-channels__title"> Читайте NewPress в </span>
                                 <span class="b-channels__icons"> <a href="https://dzen.ru/news/?favid=254147931"
                                         title="Дзен Новости - PRIMPRESS.RU" target="_blank"> <span
                                             class="b-channels__icon b-channels__icon-yandex"> <img
@@ -165,7 +165,7 @@
                                                 src="https://primpress.ru/img/template/go.svg"
                                                 alt="Google Новости - PRIMPRESS.RU" class=""> </span> </a> </span>
                             </div>
-                            <div class="b-socials"> Самые свежие материалы PRIMPRESS.RU - <span>с прямой доставкой
+                            <div class="b-socials"> Самые свежие материалы NewPress - <span>с прямой доставкой
                                     в</span> <a href="https://t.me/" target="_blank"
                                     title="Primpress в Telegram" rel="nofollow">Telegram</a> </div>
                             <div class="my-4 text-center text-truncate hidden-print">
