--- a/article/94153.html
+++ b/article/94153.html
@@ -47,7 +47,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="/index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="https://primpress.ru/img/template/logo_light.svg"
+                                    src="/img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="b-navbar-dropdown-wrap">
                         <div class="b-navbar-dropdown-header">
-                            <form method="POST" action="https://primpress.ru/mobile-switch" accept-charset="UTF-8">
+                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8">
                                 <input name="_token" type="hidden" value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
                                 <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
@@ -116,7 +116,7 @@
                             </div>
                             <hr>
                             <div class="imagePattern_big-full g-img-fit b-main-photo-overlay-wrapper mb-3">
-                                <div class="b-main-photo-overlay">Фото: PRIMPRESS</div> <a
+                                <div class="b-main-photo-overlay">Фото: NewPress</div> <a
                                     href="https://primpress.ru/img/articles/1129221115211dp.jpg" data-toggle="lightbox"
                                     data-gallery="multimedia"
                                     title="Фото: PRIMPRESS | Боулинг из машин устроили в одном из приморских городов"
@@ -128,7 +128,7 @@
                             </div>
                             <div class="b-article-content clearfix mb-4" itemprop="articleBody">
                                 <p>В соцсетях жители делятся последствиями стихии, которая обрушилась на Приморье
-                                    накануне, сообщает PRIMPRESS.</p>
+                                    накануне, сообщает NewPress.</p>
 
                                 <p>В Большом Камне машины на спуске, который покрылся льдом, не могут справиться с
                                     управлением и ударяются друг о друга. Как сообщают местные жители, на дорогах города
@@ -149,12 +149,12 @@
                                 <p>Орфография и пунктуация авторов комментариев сохранены.</p>
 
                                 <p><img alt="" class="imagePattern_big-full" data-author="Кадр видео"
-                                        src="/img/editor/images/13c062b4-8504-41dd-8a10-00c8fb85b37f.jpg" /></p>
+                                        src="https://primpress.ru/img/editor/images/13c062b4-8504-41dd-8a10-00c8fb85b37f.jpg" /></p>
 
                                 <p><img alt="" class="imagePattern_big-full" data-author="Кадр видео"
-                                        src="/img/editor/images/84d2f884-eeef-4c92-b9c2-41ebc8e438ef.jpg" /></p>
+                                        src="https://primpress.ru/img/editor/images/84d2f884-eeef-4c92-b9c2-41ebc8e438ef.jpg" /></p>
                             </div>
-                            <div class="b-channels"> <span class="b-channels__title"> Читайте Primpress.ru в </span>
+                            <div class="b-channels"> <span class="b-channels__title"> Читайте NewPress в </span>
                                 <span class="b-channels__icons"> <a href="https://dzen.ru/news/?favid=254147931"
                                         title="Дзен Новости - PRIMPRESS.RU" target="_blank"> <span
                                             class="b-channels__icon b-channels__icon-yandex"> <img
@@ -166,7 +166,7 @@
                                                 src="https://primpress.ru/img/template/go.svg"
                                                 alt="Google Новости - PRIMPRESS.RU" class=""> </span> </a> </span>
                             </div>
-                            <div class="b-socials"> Самые свежие материалы PRIMPRESS.RU - <span>с прямой доставкой
+                            <div class="b-socials"> Самые свежие материалы NewPress - <span>с прямой доставкой
                                     в</span> <a href="https://t.me/" target="_blank"
                                     title="Primpress в Telegram" rel="nofollow">Telegram</a> </div>
                             <div class="my-4 text-center text-truncate hidden-print">
@@ -446,25 +446,8 @@
                     </div>
                 </div>
                 <div class="row b-footer__bottom">
-                    <div class="col-4"> <a href="https://metrika.yandex.ru/stat/?id=36404695&amp;from=informer"
-                            target="_blank" rel="nofollow"><img
-                                src="https://informer.yandex.ru/informer/36404695/3_0_999999FF_999999FF_0_uniques"
-                                style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
-                                title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
-                        <script> (function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(36404695, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true, trackHash: true }); </script>
-                        <noscript>
-                            <div><img src="https://mc.yandex.ru/watch/36404695" style="position:absolute; left:-9999px;"
-                                    alt="" /></div>
-                        </noscript>
-                        <script> (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-76944308-1', 'auto'); ga('send', 'pageview'); </script>
-                        <script> document.write("<a href='//www.liveinternet.ru/click' " + "target=_blank><img src='//counter.yadro.ru/hit?t15.4;r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() + "' alt='' title='LiveInternet: показано число просмотров за 24" + " часа, посетителей за 24 часа и за сегодня' " + "border='0' width='88' height='31'><\/a>") </script>
-                        <script> var _tmr = window._tmr || (window._tmr = []); _tmr.push({ id: "3100887", type: "pageView", start: (new Date()).getTime() }); (function (d, w, id) { if (d.getElementById(id)) return; var ts = d.createElement("script"); ts.type = "text/javascript"; ts.async = true; ts.id = id; ts.src = "https://top-fwz1.mail.ru/js/code.js"; var f = function () { var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ts, s); }; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "topmailru-code"); </script>
-                        <noscript>
-                            <div> <img src="https://top-fwz1.mail.ru/counter?id=3100887;js=na"
-                                    style="border:0;position:absolute;left:-9999px;" alt="Top.Mail.Ru" /> </div>
-                        </noscript>
-                    </div>
-                    <div class="col-4 text-center"> &copy; PRIMPRESS 2022 <a href="https://primpress.ru/rss.xml"
+                   
+                    <div class="col-4 text-center"> &copy; NewPress 2022 <a href="https://primpress.ru/rss.xml"
                             target="_blank" title="RSS канал PRIMPRESS"> <i class="fa fa-rss" aria-hidden="true"></i>
                         </a> </div>
                     <div class="col-4 text-right"> <span class="b-age b-age--footer"
