--- a/article/94905.html
+++ b/article/94905.html
@@ -46,7 +46,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="/index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="https://primpress.ru/img/template/logo_light.svg"
+                                    src="/img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="b-navbar-dropdown-wrap">
                         <div class="b-navbar-dropdown-header">
-                            <form method="POST" action="https://primpress.ru/mobile-switch" accept-charset="UTF-8">
+                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8">
                                 <input name="_token" type="hidden" value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
                                 <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
@@ -127,7 +127,7 @@
                             </div>
                             <div class="b-article-content clearfix mb-4" itemprop="articleBody">
                                 <p>Во Владивостоке на глазах у прохожих умер мужчина. Предположительно, у него начался
-                                    инсульт, сообщает PRIMPRESS.</p>
+                                    инсульт, сообщает NewPress.</p>
 
                                 <p>На кадрах с камеры видеонаблюдения видно, что мужчина подошел к легковому автомобилю
                                     и резко упал. Рядом проходила женщина, но не обратила внимания на человека, которому
@@ -148,7 +148,7 @@
                                 <p>&laquo;Люди, что с вами? К вам тоже не подойдут, и будет поздно&raquo;, &ndash;
                                     прокомментировали приморцы.</p>
                             </div>
-                            <div class="b-channels"> <span class="b-channels__title"> Читайте Primpress.ru в </span>
+                            <div class="b-channels"> <span class="b-channels__title"> Читайте NewPress в </span>
                                 <span class="b-channels__icons"> <a href="https://dzen.ru/news/?favid=254147931"
                                         title="Дзен Новости - PRIMPRESS.RU" target="_blank"> <span
                                             class="b-channels__icon b-channels__icon-yandex"> <img
@@ -160,8 +160,8 @@
                                                 src="https://primpress.ru/img/template/go.svg"
                                                 alt="Google Новости - PRIMPRESS.RU" class=""> </span> </a> </span>
                             </div>
-                            <div class="b-socials"> Самые свежие материалы PRIMPRESS.RU - <span>с прямой доставкой
-                                    в</span> <a href="https://t.me/primpressru/" target="_blank"
+                            <div class="b-socials"> Самые свежие материалы NewPress - <span>с прямой доставкой
+                                    в</span> <a href="https://t.me/" target="_blank"
                                     title="Primpress в Telegram" rel="nofollow">Telegram</a> </div>
                             <div class="my-4 text-center text-truncate hidden-print">
                                 <div id="yandex_rtb_R-A-1834986-7"></div>
@@ -169,7 +169,7 @@
                             </div>
                             <div class="g-new-block px-0">
                                 <div class="row justify-content-between">
-                                    <div class="col-5"> <a href="https://primpress.ru/article/94904"
+                                    <div class="col-5"> <a href="/index.html"
                                             title="Дело в крупах: жительница Приморья ответит перед судом за мошенничество"
                                             class="g-color--darkgrey">
                                             <div
@@ -179,7 +179,7 @@
                                                     ответит перед судом за мошенничество </div>
                                             </div>
                                         </a> </div>
-                                    <div class="col-5"> <a href="https://primpress.ru/article/94906"
+                                    <div class="col-5"> <a href="94960.html"
                                             title="Оставят без Интернета. Россиян предупредили о новом решении"
                                             class="g-color--darkgrey">
                                             <div
@@ -222,7 +222,7 @@
                         <div id="sticky-rightbar">
                             <div class="row g-img-fit">
                                 <h2 class="b-h-title b-h-title--home px-3"> Новости (Общество) </h2>
-                                <div class="col-12 mb-3"> <a href="/article/94960"
+                                <div class="col-12 mb-3"> <a href="94960.html"
                                         title="Жительницы Приморья охотно выходят замуж за мужчин из Узбекистана">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -245,7 +245,7 @@
                                         class="fa fa-chevron-right b-slider-card__nav b-slider-card__nav--next g-cursor-pointer"></i>
                                     <div class="g-shadow--column g-link-block g-link-block--shadow-scale">
                                         <div id="js-fixed-slider" class="owl-carousel"> <a
-                                                href="https://primpress.ru/article/94099"
+                                                href="94099.html"
                                                 title="Чтобы не стало хуже: врач из Приморья рассказала о профилактике остеохондроза">
                                                 <div class="d-flex flex-column justify-content-between h-100"> <img
                                                         src="https://primpress.ru/img/articles/1128221155411dp.jpg"
@@ -260,7 +260,7 @@
                                                             ноября 2022, 18:10 </div>
                                                     </div>
                                                 </div>
-                                            </a> <a href="https://primpress.ru/article/94329"
+                                            </a> <a href="94329.html"
                                                 title="2023 рубля в подарок: АТБ объявил о предновогодней акции «100% кешбэк от Кролика АТБ»">
                                                 <div class="d-flex flex-column justify-content-between h-100"> <img
                                                         src="https://primpress.ru/img/articles/1202221106461dp.jpg"
@@ -275,7 +275,7 @@
                                                             декабря 2022, 09:40 </div>
                                                     </div>
                                                 </div>
-                                            </a> <a href="https://primpress.ru/article/94154"
+                                            </a> <a href="94154.html"
                                                 title="Должен знать каждый мужчина: врач-уролог рассказал, как справиться с часто встречающимися заболеваниями">
                                                 <div class="d-flex flex-column justify-content-between h-100"> <img
                                                         src="https://primpress.ru/img/articles/1129221425051dp.jpg"
@@ -293,7 +293,7 @@
                                             </a> </div>
                                     </div>
                                 </div>
-                                <div class="col-12 mb-3"> <a href="/article/94959"
+                                <div class="col-12 mb-3"> <a href="94959.html"
                                         title="Специалисты назвали месяцы, в которые приморцы чаще вступали в брак в прошлом году">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -311,7 +311,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94958"
+                                <div class="col-12 mb-3"> <a href="94958.html"
                                         title="Во Владивостоке возобновлены рейсы парома «Босфор Восточный» на остров Попова">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -328,7 +328,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94954"
+                                <div class="col-12 mb-3"> <a href="94954.html"
                                         title="«Гоняют по льду»: приморцы продолжают нарушать запрет администрации города">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -345,7 +345,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94957"
+                                <div class="col-12 mb-3"> <a href="94957.html"
                                         title="С улиц Владивостока убрали почти 800 самовольно установленных гаражей и павильонов">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -442,25 +442,8 @@
                     </div>
                 </div>
                 <div class="row b-footer__bottom">
-                    <div class="col-4"> <a href="https://metrika.yandex.ru/stat/?id=36404695&amp;from=informer"
-                            target="_blank" rel="nofollow"><img
-                                src="https://informer.yandex.ru/informer/36404695/3_0_999999FF_999999FF_0_uniques"
-                                style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
-                                title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
-                        <script> (function (m, e, t, r, i, k, a) { m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) }; m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(36404695, "init", { clickmap: true, trackLinks: true, accurateTrackBounce: true, webvisor: true, trackHash: true }); </script>
-                        <noscript>
-                            <div><img src="https://mc.yandex.ru/watch/36404695" style="position:absolute; left:-9999px;"
-                                    alt="" /></div>
-                        </noscript>
-                        <script> (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga'); ga('create', 'UA-76944308-1', 'auto'); ga('send', 'pageview'); </script>
-                        <script> document.write("<a href='//www.liveinternet.ru/click' " + "target=_blank><img src='//counter.yadro.ru/hit?t15.4;r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() + "' alt='' title='LiveInternet: показано число просмотров за 24" + " часа, посетителей за 24 часа и за сегодня' " + "border='0' width='88' height='31'><\/a>") </script>
-                        <script> var _tmr = window._tmr || (window._tmr = []); _tmr.push({ id: "3100887", type: "pageView", start: (new Date()).getTime() }); (function (d, w, id) { if (d.getElementById(id)) return; var ts = d.createElement("script"); ts.type = "text/javascript"; ts.async = true; ts.id = id; ts.src = "https://top-fwz1.mail.ru/js/code.js"; var f = function () { var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ts, s); }; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "topmailru-code"); </script>
-                        <noscript>
-                            <div> <img src="https://top-fwz1.mail.ru/counter?id=3100887;js=na"
-                                    style="border:0;position:absolute;left:-9999px;" alt="Top.Mail.Ru" /> </div>
-                        </noscript>
-                    </div>
-                    <div class="col-4 text-center"> &copy; PRIMPRESS 2022 <a href="https://primpress.ru/rss.xml"
+                   
+                    <div class="col-4 text-center"> &copy; NewPress 2022 <a href="https://primpress.ru/rss.xml"
                             target="_blank" title="RSS канал PRIMPRESS"> <i class="fa fa-rss" aria-hidden="true"></i>
                         </a> </div>
                     <div class="col-4 text-right"> <span class="b-age b-age--footer"
