--- a/society.html
+++ b/society.html
@@ -42,7 +42,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="https://primpress.ru/img/template/logo_light.svg"
+                                    src="/img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
@@ -86,7 +86,7 @@
                     </div>
                     <div class="b-navbar-dropdown-wrap">
                         <div class="b-navbar-dropdown-header">
-                            <form method="POST" action="https://primpress.ru/mobile-switch" accept-charset="UTF-8">
+                            <form method="POST" action="/mobile-switch.html" accept-charset="UTF-8">
                                 <input name="_token" type="hidden" value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
                                 <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
