--- a/politics.html
+++ b/politics.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/style.css?v=22121602">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -109,7 +109,7 @@
                     <div class="col-9 g-img-fit">
                         <div id="sticky-content">
                             <h1 class="b-h-title b-h-title--home"> Политика </h1> <a
-                                href="https://primpress.ru/article/91580"
+                                href="index.html"
                                 title="Во Владивостоке состоялось первое заседание думы города шестого созыва">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -126,7 +126,7 @@
                                             мобилизованных граждан </div>
                                     </div>
                                 </div>
-                            </a> <a href="https://primpress.ru/article/91504"
+                            </a> <a href="index.html"
                                 title="Попавшийся на шпионаже японский консул покидает Приморье">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -141,7 +141,7 @@
                                             подтвердили в МИД краевого центра </div>
                                     </div>
                                 </div>
-                            </a> <a href="https://primpress.ru/article/90636"
+                            </a> <a href="index.html"
                                 title="«Это мелко...»: глава Хабаровского края вновь сделал скандальное заявление о Владивостоке">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -158,7 +158,7 @@
                                             так считает </div>
                                     </div>
                                 </div>
-                            </a> <a href="https://primpress.ru/article/90609"
+                            </a> <a href="inde"
                                 title="«Я предупреждал об этом»: Владимир Путин сделал важное заявление, касающееся бизнесменов">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
