--- a/article/94916.html
+++ b/article/94916.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94916" />
+    <link rel="canonical" href="94916.html" />
     <title>Жители Владивостока приняли участие в обсуждении будущего благоустройства сопки Орлиное Гнездо</title>
     <meta name="description" content="Начало реализации проекта запланировано на следующий год">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
@@ -16,8 +16,8 @@
     <meta property="og:description" content="Начало реализации проекта запланировано на следующий год" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1215221401011dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94916" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:url" content="94916.html" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1215221401011dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121615">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121615">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
