--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="csrf-token" content="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru" />
     <title>Новости Приморья на NewPress. Последние новости Приморья и Владивостока</title>
     <meta name="description" content="Качественные новости о жизни Приморского края и Владивостока">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
@@ -169,7 +168,7 @@
             <div class="g-new-block">
                 <div class="row g-img-fit">
                     <div class="col-9">
-                        <h1 class="b-h-title b-h-title--home"> <a href="https://primpress.ru/news"
+                        <h1 class="b-h-title b-h-title--home"> <a href="news.html"
                                 title="Лента новостей"> ЛЕНТА НОВОСТЕЙ </a> </h1> <a href="article/94922.html"
                             title="Подарок на заказ или сюрприз?: владивостокцы рассказали, как готовятся к Новому году">
                             <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
