--- a/mobile-switch.html
+++ b/mobile-switch.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="Новости Приморья на NewPress. Последние новости Приморья и Владивостока"/>
     <meta property="og:description" content="Качественные новости о жизни Приморского края и Владивостока"/>
     <meta property="og:type" content="website"/>
-    <!--    <meta property="og:image" content="https://primpress.ru/img/template/socials_logo1200x675.png"/>-->
+    <!--    <meta property="og:image" content="img/template/logo_light.svg"/>-->
     <!--    <meta property="og:url" content="https://primpress.ru"/>-->
     <!--    <meta property="og:site_name" content="PRIMPRESS.RU"/>-->
-    <!--    <meta name="twitter:image" content="https://primpress.ru/img/template/socials_logo1200x675.png"/>-->
+    <!--    <meta name="twitter:image" content="img/template/logo_light.svg"/>-->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@PrimVl"/>
     <meta name="twitter:title" content="Новости Приморья на NewPress. Последние новости Приморья и Владивостока"/>
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121914">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121914">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/mobile.css?v=22121914">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
