--- a/society.html
+++ b/society.html
@@ -7,26 +7,25 @@
     <meta name="csrf-token" content="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/news/society" />
-    <title>Новости Приморья на PRIMPRESS.RU. Последние новости Приморья и Владивостока</title>
+    <link rel="canonical" href="society.html" />
+    <title>Новости Приморья на NewPress. Последние новости Приморья и Владивостока</title>
     <meta name="description" content="Качественные новости о жизни Приморского края и Владивостока">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
-    <meta property="og:title" content="Новости Приморья на PRIMPRESS.RU. Последние новости Приморья и Владивостока" />
+    <meta property="og:title" content="Новости Приморья на NewPress Последние новости Приморья и Владивостока" />
     <meta property="og:description" content="Качественные новости о жизни Приморского края и Владивостока" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://primpress.ru/img/template/socials_logo1200x675.png" />
-    <meta property="og:url" content="https://primpress.ru" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
-    <meta name="twitter:image" content="https://primpress.ru/img/template/socials_logo1200x675.png" />
+    <meta property="og:image" content="img/template/logo_light.svg" />
+    <meta property="og:site_name" content="NewPress" />
+    <meta name="twitter:image" content="img/template/logo_light.svg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
-    <meta name="twitter:title" content="Новости Приморья на PRIMPRESS.RU. Последние новости Приморья и Владивостока" />
+    <meta name="twitter:title" content="Новости Приморья на NewPress. Последние новости Приморья и Владивостока" />
     <meta name="twitter:description" content="Качественные новости о жизни Приморского края и Владивостока" />
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121601">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121601">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
