--- a/article/94861.html
+++ b/article/94861.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="Rp6Io6MGaGgOP99IHOS7Ouv2oglrGuUz4NvWwycm" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94861" />
+    <link rel="canonical" href="94861.html" />
     <title>На жителя Владивостока, устроившего конфликт на парковке, завели уголовное дело</title>
     <meta name="description" content="Ему грозит до семи лет тюрьмы">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
@@ -16,8 +16,8 @@
     <meta property="og:description" content="Ему грозит до семи лет тюрьмы" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1214221331081dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94861" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:url" content="94861" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1214221331081dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121604">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -412,49 +412,6 @@
                             <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
-                    <div class="offset-1 col-5">
-                        <h5>NewPress в социальных сетях</h5>
-                        <ul class="g-link-block">
-                            <li> <a href="https://vk.com/" target="_blank" title="NewPress в ВКонтакте"> <i
-                                        class="fa fa-vk" aria-hidden="true"></i> ВКонтакте </a> </li>
-                            <li> <a href="https://ok.ru/" target="_blank" title="NewPress в Одноклассниках">
-                                    <i class="fa fa-odnoklassniki-square" aria-hidden="true"></i> Одноклассники </a>
-                            </li>
-                            <li> <a href="https://t.me/" target="_blank" title="NewPress в Telegram"
-                                    rel="nofollow"> <i class="fa fa-telegram" aria-hidden="true"></i> Telegram </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row footer__info">
-                    <div class="col"> На данном сайте распространяется информация сетевого издания NewPress
-                        <br>Свидетельство о регистрации СМИ ЭЛ ФС 77 - 67525, выдано Федеральной службой по надзору в
-                        сфере связи, информационных технологий и массовых коммуникаций. 18.10.2016 г. <br>Учредитель и
-                        издатель: ООО "Приморская пресса". ОГРН: 1152540009005. ИНН: 2540217241. Главный редактор:
-                        Протасов М. В. </div>
-                    <div class="col"> Адрес учредителя и редакции: <br>690106, Приморский край, г. Владивосток, пр-т
-                        Красного Знамени, д. 10, офис 301 <br>Тел.: <a href="tel:+7-423-273-30-73"
-                            class="footer__marker">8 (423) 273-30-73.</a> <br>Тел. рекламной службы: <a
-                            href="tel:+79147033073" title="Телефон рекламной службы">+7 (914) 703-30-73</a> <a
-                            href="https://api.whatsapp.com/send?phone=79147033073" title="Написать на WhatsApp"><i
-                                class="fa fa-whatsapp pl-2 fa-wa" style="font-size: 18px;"></i></a> <a
-                            href="https://t.me/Edition_PrimPress" title="Написать в Telegram"><i
-                                class="fa fa-telegram pl-2 fa-tg" style="font-size: 18px;"></i></a> <br>E-mail: <a
-                            href="mailto:info@primpress.ru" title="Написать письмо"
-                            class="footer__marker">info@primpress.ru</a>
-                        <div class="b-footer__policy"> <a href="https://primpress.ru/policy.html"
-                                title="Обработка персональных данных">Политика конфиденциальности.</a> <a
-                                href="https://primpress.ru/rules.html" title="Информация об ограничениях">Правила
-                                использования информации.</a> </div>
-                    </div>
-                </div>
-                <div class="row b-footer__bottom">
-                   
-                    <div class="col-4 text-center"> &copy; NewPress 2022 <a href="https://primpress.ru/rss.xml"
-                            target="_blank" title="RSS канал PRIMPRESS"> <i class="fa fa-rss" aria-hidden="true"></i>
-                        </a> </div>
-                    <div class="col-4 text-right"> <span class="b-age b-age--footer"
-                            title="Для аудитории 16+">16+</span> </div>
                 </div>
             </div>
             <div class="btn-to-top" id="js-to-top"> <i class="fa fa-long-arrow-up" aria-hidden="true"></i> Наверх </div>
