--- a/article/94887.html
+++ b/article/94887.html
@@ -7,16 +7,16 @@
     <meta name="csrf-token" content="Rp6Io6MGaGgOP99IHOS7Ouv2oglrGuUz4NvWwycm" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94887" />
+    <link rel="canonical" href="94887.html" />
     <title>Будут больше трех недель. На новогодние праздники добавили выходных</title>
     <meta name="description" content="На работу в итоге можно будет выйти гораздо позже">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
     <meta property="og:title" content="Будут больше трех недель. На новогодние праздники добавили выходных" />
     <meta property="og:description" content="На работу в итоге можно будет выйти гораздо позже" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="94887.html" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1215220414541dp.jpg" />
     <meta property="og:url" content="https://primpress.ru/article/94887" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1215220414541dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121603">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
