--- a/article/94900.html
+++ b/article/94900.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94900" />
+    <link rel="canonical" href="94900.html" />
     <title>Новое решение может принять Apple для некоторых пользователей</title>
     <meta name="description" content="Это может произойти в конце 2023 года">
     <meta name="pmail-verification" content="ce49cdd6956234d8420da6befd62db99">
@@ -15,8 +15,8 @@
     <meta property="og:description" content="Это может произойти в конце 2023 года" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1215221038441dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94900" />
-    <meta property="og:site_name" content="PRIMPRESS.RU" />
+    <meta property="og:url" content="94900.html" />
+    <meta property="og:site_name" content="NewPress" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1215221038441dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PrimVl" />
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121615">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121615">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
