--- a/article/94919.html
+++ b/article/94919.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="EtvsC5eMWICgfKhyuRGuo9rDhBhs7SHhuEWJ0RsV" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94919" />
+    <link rel="canonical" href="94919.html" />
     <title>Зеленые итоги года подводит Сбер на Дальнем Востоке: 650 кг добрых крышечек, тонны макулатуры и умные
         приемники пластика</title>
     <meta name="description"
@@ -18,7 +18,7 @@
     <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1215221540341dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94919" />
+    <meta property="og:url" content="94919.html" />
     <meta property="og:site_name" content="PRIMPRESS.RU" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1215221540341dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121615">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
