--- a/article/94925.html
+++ b/article/94925.html
@@ -7,7 +7,7 @@
     <meta name="csrf-token" content="Rp6Io6MGaGgOP99IHOS7Ouv2oglrGuUz4NvWwycm" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, user-scalable=yes">
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://primpress.ru/article/94925" />
+    <link rel="canonical" href="94925.html" />
     <title>Во Владивостоке появляются дог-боксы</title>
     <meta name="description"
         content="Первые объекты установлены в сквере Первой маевки на улице Калинина и в Покровском парке">
@@ -17,7 +17,7 @@
         content="Первые объекты установлены в сквере Первой маевки на улице Калинина и в Покровском парке" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="https://primpress.ru/img/articles/1215221701451dp.jpg" />
-    <meta property="og:url" content="https://primpress.ru/article/94925" />
+    <meta property="og:url" content="94925.html" />
     <meta property="og:site_name" content="PRIMPRESS.RU" />
     <meta name="twitter:image" content="https://primpress.ru/img/articles/1215221701451dp.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru//css/style.css?v=22121604">
+    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
